--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@hookform/resolvers": "^5.2.1",
     "@hugeicons/core-free-icons": "^1.0.16",
     "@hugeicons/react": "^1.0.5",
@@ -39,10 +40,13 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@studio-freight/lenis": "^1.0.42",
+    "antd": "^5.27.1",
+    "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "country-state-city": "^3.2.1",
+    "currency.js": "^2.0.4",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "html-to-image": "^1.11.13",
@@ -52,6 +56,8 @@
     "next": "15.4.6",
     "next-themes": "^0.4.6",
     "react": "19.1.0",
+    "react-currency-format": "^1.1.0",
+    "react-currency-input-field": "^3.10.0",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
