--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "country-state-city": "^3.2.1",
-   
+    "currency-converter-lt": "^2.0.1",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "html-to-image": "^1.11.13",
